--- a/preview/preview.htm
+++ b/preview/preview.htm
@@ -1,6 +1,9 @@
+<script src="https://cdn.jsdelivr.net/npm/html2canvas@1.4.1/dist/html2canvas.min.js"></script>
+
 <style>
 	body {
 		margin: 0;
+		padding: 0;
 	}
 	#demo-frame {
 		border: 0;
@@ -8,10 +11,47 @@
 		background: white;
 		height: 100%;
 	}
+	#image-holder {
+	}
+	#canvas-holder {
+	}
+	.holder {
+		position: absolute;
+		top: 0;
+		left: 0;
+	}
+	.holder-size {
+		height: 512px;
+		width: 512px;
+	}
+	#score-holder {
+		height: 50px;
+		width: 50px;
+		overflow: hidden;
+		position: absolute;
+		top: 10px;
+		right: 10px;
+		background-color: yellow;
+		border-radius: 50%;
+		display: flex;
+		justify-content: center;
+		align-items: center;
+		text-align: center;
+	}
 </style>
 
-<body>
-	<iframe src="" frameborder="0" id="demo-frame" allowfullscreen></iframe>
+<img id="source-image" src="./image.png" style="display: none;"/>
+
+<body onmouseenter="onHover()" onmousemove="onMove()">
+
+	<div id="image-holder" class="holder holder-size">
+		<canvas id="image-canvas" class="holder-size"></canvas>
+	</div>
+	<div id="canvas-holder" class="holder holder-size"></div>
+	<div id="score-holder">100%</div>
+
+
+	<iframe src="" frameborder="0" id="frame" allowfullscreen></iframe>
 
 	<script src="detached-window.js"></script>
 </body>
