--- a/preview/preview.html
+++ b/preview/preview.html
@@ -1,3 +1,5 @@
+<script src="https://cdn.jsdelivr.net/npm/html2canvas@1.4.1/dist/html2canvas.min.js"></script>
+
 <style>
 	body {
 		margin: 0;
@@ -10,7 +12,7 @@
 	}
 </style>
 
-<body>
+<body onmouseenter="onHover()">
 	<iframe
 		src="about://blank"
 		frameborder="0"
