--- a/preview/preview.htm
+++ b/preview/preview.htm
@@ -1,4 +1,6 @@
-<script src="https://cdn.jsdelivr.net/npm/html2canvas@1.4.1/dist/html2canvas.min.js"></script>
+<script src="
+https://cdn.jsdelivr.net/npm/html-to-image@1.11.13/dist/html-to-image.min.js
+"></script>
 
 <style>
 	body {
